Updating package name, remove MethodID
MethodID was problematic brittle because the anonymous inner class numbers may change over time.